Chore: :sparkles: Create layout Create app layout Issue #1

--- a/assets/styles/card-box.scss
+++ b/assets/styles/card-box.scss
@@ -1,3 +1,5 @@
+$blueTitle: #0481f9;
+
 .card-box {
   width: 40rem;
   height: 18rem;
@@ -7,12 +9,12 @@
   margin: .5rem;
   border-radius: .5rem;
 
-  .header {
+  .card-box__header {
     width: 100%;
     height: 3.5rem;
     display: block;
     float: left;
-    color: #d2d6de;
+    color: $blueTitle;
     line-height: 1.8;
     vertical-align: bottom;
     padding: .4rem;
@@ -20,7 +22,7 @@
     padding-left: 1rem;
     border-bottom: .0625rem #f0f0f1 solid;
 
-    .title {
+    .card-box__header__title {
       font-size: 1.3rem;
       font-weight: 600;
       color: #444;
@@ -30,13 +32,13 @@
     }
   }
 
-  .content {
+  .card-box__content {
     height: 14.5rem;
     width: 100%;
     display: block;
     float: left;
 
-    .item {
+    .card-box__content__item {
       width: auto;
       margin: 0 .8rem;
       margin-top: .4rem;
@@ -47,7 +49,7 @@
       border-bottom-color: #f0f0f1;
       border-bottom-style: solid;
 
-      .title {
+      .card-box__content__item__title {
         display: block;
         white-space: nowrap;
         overflow: hidden;
@@ -56,7 +58,7 @@
         height: 35%;
       }
 
-      .bottom {
+      .card-box__content__item__bottom {
         display: block;
         width: 100%;
         height: 60%;
@@ -86,7 +88,7 @@
           width: 49%;
           height: 99%;
           vertical-align: top;
-          text-align: right;
+          //text-align: right;
         }
       }
     }
