--- a/assets/styles/navbar.scss
+++ b/assets/styles/navbar.scss
@@ -1,105 +1,220 @@
-$bgDefault      : #e74c3c;
-$bgHighlight    : #c0392b;
-$colDefault     : #ecf0f1;
-$colHover       : #ffbbbc;
+$bgDefault: #e74c3c;
+$bgHighlight: #c0392b;
+$colDefault: #ecf0f1;
+$colHover: #ffbbbc;
+$blue: #1976d2;
+$lightBlue: #489aea;
+$white: #fff;
 
-.navbar-expand-lg {
-  flex-wrap: nowrap;
-  justify-content: flex-start;
-}
+//.navbar-expand-lg {
+//  flex-wrap: nowrap;
+//  justify-content: flex-start;
+//}
+//
+//.d-lg-none {
+//  display: none !important;
+//}
+//
+//.navbar-expand-lg .navbar-collapse {
+//  display: flex !important;
+//  flex-basis: auto;
+//}
+//
+//.collapse:not(.show) {
+//  display: none;
+//}
+//
+//.navbar-collapse {
+//  flex-basis: 100%;
+//  flex-grow: 1;
+//  align-items: center;
+//}
 
-.d-lg-none {
-  display: none !important;
-}
+//.navbar {
+//  position: relative;
+//  display: flex;
+//  flex-wrap: wrap;
+//  align-items: center;
+//  justify-content: space-between;
+//  padding-top: 1.5rem;
+//  padding-right: 1rem;
+//  padding-bottom: 1.5rem;
+//  padding-left: 1rem;
+//
+//  &.navbar-light .navbar-brand {
+//    color: #0A2463;
+//  }
+//
+//  .text-decoration-none {
+//    text-decoration: none !important;
+//  }
+//
+//  .navbar-brand {
+//    padding-top: .40625rem;
+//    padding-bottom: .40625rem;
+//    margin-right: 1rem;
+//    font-size: 1.125rem;
+//    text-decoration: none;
+//    white-space: nowrap;
+//  }
+//
+//  &.navbar-light {
+//    background-color: $bgDefault;
+//    border-color: $bgHighlight;
+//  }
+//
+//  & > .container, & > .container-fluid, & > .container-sm, & > .container-md, & > .container-lg, & > .container-xl {
+//    display: flex;
+//    flex-wrap: inherit;
+//    align-items: center;
+//    justify-content: space-between;
+//  }
+//
+//  ul {
+//    .navbar-nav {
+//      display: flex;
+//      flex-direction: column;
+//      padding-left: 0;
+//      margin-bottom: 0;
+//      list-style: none;
+//
+//      list-style-type: none;
+//      margin: 0;
+//      padding: 0;
+//      overflow: hidden;
+//      background-color: #333;
+//
+//      li {
+//        float: left;
+//
+//        a {
+//          display: inline-block;
+//          color: white;
+//          text-align: center;
+//          padding: 14px 16px;
+//          text-decoration: none;
+//        }
+//      }
+//    }
+//  }
+//}
+//
+//.ms-auto {
+//  margin-left: auto !important;
+//}
+//
+//.me-4 {
+//  margin-right: 1rem !important;
+//}
+//
+//ol, ul, dl {
+//  margin-top: 0;
+//  margin-bottom: 1rem;
+//}
+//
+//.navbar-expand-lg .navbar-nav .nav-link {
+//  padding-right: 1.5rem;
+//  padding-left: 1.5rem;
+//}
 
-.navbar-expand-lg .navbar-collapse {
-  display: flex !important;
-  flex-basis: auto;
-}
+//.nav-link {
+//  display: block;
+//  padding: .5rem 1rem;
+//  font-size: .875rem;
+//  font-weight: 500;
+//  color: #FF4564;
+//  text-decoration: none;
+//  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
+//}
 
-.collapse:not(.show) {
-  display: none;
-}
-
-.navbar-collapse {
-  flex-basis: 100%;
-  flex-grow: 1;
+.header {
+  position: fixed;
+  width: 100%;
+  left: 0;
+  top: 0;
+  padding: 10px 20px;
+  //z-index: 1300;
+  z-index: 190;
+  display: flex;
   align-items: center;
-}
-
-.navbar-nav {
-  display: flex;
-  flex-direction: column;
-  padding-left: 0;
-  margin-bottom: 0;
-  list-style: none;
-}
-
-.navbar {
-  position: relative;
-  display: flex;
   flex-wrap: wrap;
-  align-items: center;
-  justify-content: space-between;
-  padding-top: 1.5rem;
-  padding-right: 1rem;
-  padding-bottom: 1.5rem;
-  padding-left: 1rem;
+  justify-content: flex-end;
+  box-shadow: 0 6px 25px 0 rgb(38 50 56 / 20%);
+  height: 65px;
 
-  &.navbar-light .navbar-brand {
-    color: #0A2463;
-  }
-
-  .text-decoration-none {
-    text-decoration: none !important;
-  }
-
-  .navbar-brand {
-    padding-top: .40625rem;
-    padding-bottom: .40625rem;
-    margin-right: 1rem;
-    font-size: 1.125rem;
+  .brand {
+    position: relative;
+    color: $white;
+    font-size: 1.5rem;
+    padding-left: 20px;
     text-decoration: none;
-    white-space: nowrap;
+
+    h4 {
+      width: 100%;
+    }
   }
 
-  &.navbar-light {
-    background-color: $bgDefault;
-    border-color: $bgHighlight;
-  }
 
-  &>.container, &>.container-fluid, &>.container-sm, &>.container-md, &>.container-lg, &>.container-xl {
+  .header-left {
+    display: -ms-flexbox;
     display: flex;
-    flex-wrap: inherit;
-    align-items: center;
+    -ms-flex-pack: justify;
     justify-content: space-between;
+    width: 100%;
+    position: relative;
+  }
+
+  .header-right {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-align: center;
+    align-items: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+  }
+
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    //background-color: #333;
+
+    li {
+      float: left;
+
+      a {
+        display: inline-block;
+        color: $blue;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+      }
+    }
   }
 }
 
-.ms-auto {
-  margin-left: auto !important;
-}
+.header-sidebar {
+    position: relative;
 
-.me-4 {
-  margin-right: 1rem !important;
-}
+  .header {
+    background: linear-gradient(to bottom right, $blue, $lightBlue);
+    width: 300px;
 
-ol, ul, dl {
-  margin-top: 0;
-  margin-bottom: 1rem;
-}
-
-.navbar-expand-lg .navbar-nav .nav-link {
-  padding-right: 1.5rem;
-  padding-left: 1.5rem;
-}
-
-.nav-link {
-  display: block;
-  padding: .5rem 1rem;
-  font-size: .875rem;
-  font-weight: 500;
-  color: #FF4564;
-  text-decoration: none;
-  transition: color 0.15s ease-in-out,background-color 0.15s ease-in-out,border-color 0.15s ease-in-out;
+    position: fixed;
+    left: 0;
+    top: 0;
+    //z-index: 1400;
+    z-index: 191;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-align: center;
+    align-items: center;
+    -ms-flex-pack: start;
+    justify-content: flex-start;
+    padding-left: 0;
+    -webkit-transition: all .3s ease;
+    -o-transition: all .3s ease;
+    transition: all .3s ease;
+  }
 }
